[package]
name = "ownable-robot"
version = "0.1.0"
authors = ["bekauz <bekauz@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
log = "0.4"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
sha2 = "0.10.6"
sha3 = "0.7.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
js-sys = "0.3.56"
serde_json = "1.0.59"
serde_with = "2.0.1"
serde-wasm-bindgen = "0.4.2"
bs58 = "0.4.0"
blake2 = "0.10.6"
hex = "0.4.3"
secp256k1 = "0.26.0"
ownable-std = { path="../../../ownable-std/" }
ownable-std-macros = "0.1.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
